fix(style): docusaurus admonition dark mode color

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -11,6 +11,7 @@
 
 .admonition-shell {
   --ra-admonition-background-color: rgb(41, 45, 62) !important;
+  --ra-admonition-color: #ffffff;
 }
 
 .admonition a {
